npcs, restart button
Added the NPCs to the Derby database. Changed the start game button to “play game” and made the restart button actually restart the game and the database. Fixed duplicate item problem.